# QTBUG-Sample-Project

./: CMakeLists.txt  basicwindow.cpp  basicwindow.h  basicwindow.ui  main.cpp
